corrected the alignment of 'remember me' checkbox.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -530,3 +530,7 @@ input, button {
     stroke-dashoffset: 0;
   }
 }
+
+.test{
+  display: inherit;
+}
